2019-09-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: revised argument checking

2019-09-29 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Completed manual page for command ::rivet::thread_id
    * src/mod_rivet_ng/rivetCore.c: Rivet_GetThreadId rewritten. Now the
    command accepts an optional argument to select decimal or hexadecimal (default)
    output 

2019-08-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml: Documenting SingleThreadExit directive

2019-07-27 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,src/mod_rivet_ng/rivetCore.c: Add ::rivet::thread_id
    manual page

2019-06-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_worker_mpm.c: Removed unnecessary access to thread private data
    in WorkerBridge_Finalize

2019-06-25 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_worker_mpm.c: Better handling of exit signal, assigning tasks
    to functions in a more consistent way. Worker_Shutdown declared as 'static'
    * src/mod_rivet_ng/rivet_[prefork|lazy]_mpm.c: New scheme for bridge function names 
    * src/mod_rivet_ng/rivet_lazy_mpm.c: Removed redundant exit command handling flags

2019-05-29 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: Now handling the directive SingleThreadExit 
    * src/mod_rivet_ng/[worker|lazy|prefork].c: Now handling single thread exit
    * src/mod_rivet_ng/worker_prefork_common.c: Reviving and fixing Rivet_CleanupProcessor
    * src/mod_rivet_ng/mod_rivet_common.c: Add function Rivet_ReleaseRunningScripts to
    release Tcl_Obj instances of configuration scripts

2019-05-24 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: Add Tcl_DecrRefCnt after
    RivetCache_StoreScript as this function itself calls
    Tcl_IncrRefCnt to preserve the Tcl_Obj with the script code
    
2019-04-16 Massimo Manghi <mxmanghi@apache.org>